# obsidian-cli-rs

./: .cursorignore  .gitignore  COVERAGE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_COMPATIBILITY_REPORT.md  Makefile  README.md  cobertura.xml  compatibility_verification.py  example-obsidian-cli.toml  test-obsidian-cli.toml  test_template_demo.py
src/: cli.rs  config.rs  errors.rs  frontmatter.rs  lib.rs  main.rs  mcp_server.rs  template.rs  types.rs  utils.rs
src/commands/: add_uid.rs  cat.rs  edit.rs  find.rs  info.rs  journal.rs  ls.rs  meta.rs  mod.rs  new.rs  query.rs  rename.rs  rm.rs  serve.rs
tests/: add_uid_command_tests.rs  advanced_query_engine_tests.rs  basic_command_coverage_tests.rs  basic_tests.rs  builder_pattern_tests.rs  cli_builder_integration_tests.rs  command_integration_tests.rs  comprehensive_mcp_server_tests.rs  config_error_handling_tests.rs  config_tests.rs  error_types_tests.rs  essential_cli_tests.rs  frontmatter_edge_cases_tests.rs  info_command_tests.rs  info_ls_render_tests.rs  journal_command_tests.rs  main_exit_code_tests.rs  mcp_server_coverage_tests.rs  meta_command_coverage_tests.rs  newtype_pattern_tests.rs  optimization_coverage_tests.rs  remaining_coverage_tests.rs  rename_tests.rs  simple_config_tests.rs  simple_utils_tests.rs  template_error_path_tests.rs  template_tests.rs  types_tests.rs  utils_tests.rs  version_command_tests.rs
