[package]
name = "obsidian-cli"
version = "0.2.0"
edition = "2021"
description = "CLI tool for interacting with Obsidian vaults, featuring AI assistant integration"
license = "Apache-2.0"
authors = ["Obsidian CLI Rust Team"]
repository = "https://github.com/jhonce/obsidian-cli-rs"
keywords = ["obsidian", "cli", "markdown", "notes", "knowledge-management"]

[[bin]]
name = "obsidian-cli"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

# File system and path operations
walkdir = "2.5"
dirs = "5.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime for MCP server
tokio = { version = "1.0", features = ["full"] }

# MCP (Model Context Protocol) server implementation
# Manual JSON-RPC based implementation

# JSON handling
serde_json = "1.0"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }


# Terminal output and formatting
colored = "2.1"
comfy-table = "7.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File size formatting
humansize = "2.1"

# Text processing and matching
fuzzy-matcher = "0.3"
regex = "1.11"

# Shell expansion for paths
shellexpand = "3.1"

# TTY detection for stdin
atty = "0.2"

# String templating and frontmatter parsing  
gray_matter = "0.3.2"

[features]
default = []

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
serde_json = "1.0"
